--- a/src/sass/__variables.scss
+++ b/src/sass/__variables.scss
@@ -31,5 +31,5 @@ $box-shadow-player-active: 0px 0px 15px 5px $color-green-light;
 $box-shadow-dark: 0px 0px 6px 0px rgba(0, 0, 0, 0.4);
 
 $card-border-radius: 10px;
-$card-width: 10rem;
-$card-height: 15rem;
+$card-width: 11rem;
+$card-height: 16rem;
